Parser.output
Terminals unused in grammar

   WRITELN
   INT
   CHAR
   ID
   CONSTANT


Grammar

    0 $accept: prog $end

    1 prog: stmts

    2 stmts: %empty
    3      | stmt SEMICOLON stmts

    4 stmt: IDENTIFIER
    5     | KEYWORD
    6     | NUM
    7     | WRITE
    8     | WHILE
    9     | IF
   10     | ELSE
   11     | RETURN
   12     | BREAK
   13     | READ
   14     | LPARN
   15     | RPARN
   16     | LEFTBRAC
   17     | RIGHTBRAC
   18     | LEFTCURLY
   19     | RIGHTCURLY
   20     | ADD
   21     | MINUS
   22     | MUL
   23     | DIV
   24     | EQUAL
   25     | EQUALS
   26     | NOTEQUAL
   27     | LESSTHAN
   28     | LESSTHANOREQ
   29     | GREATERTHAN
   30     | GREATERTHANOREQ
   31     | AND
   32     | OR
   33     | OTHER


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 4
NUM (259) 6
OTHER (260) 33
SEMICOLON (261) 3
LPARN (262) 14
WRITE (263) 7
WRITELN (264)
IF (265) 9
ELSE (266) 10
RETURN (267) 11
RPARN (268) 15
BREAK (269) 12
READ (270) 13
LEFTBRAC (271) 16
RIGHTBRAC (272) 17
LEFTCURLY (273) 18
RIGHTCURLY (274) 19
WHILE (275) 8
KEYWORD (276) 5
AND (277) 31
OR (278) 32
ADD (279) 20
MINUS (280) 21
MUL (281) 22
DIV (282) 23
EQUAL (283) 24
EQUALS (284) 25
NOTEQUAL (285) 26
LESSTHAN (286) 27
LESSTHANOREQ (287) 28
GREATERTHAN (288) 29
GREATERTHANOREQ (289) 30
INT (290)
CHAR (291)
ID (292)
CONSTANT (293)


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
prog (40)
    on left: 1, on right: 0
stmts (41)
    on left: 2 3, on right: 1 3
stmt (42)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
    24 25 26 27 28 29 30 31 32 33, on right: 3


State 0

    0 $accept: . prog $end

    IDENTIFIER       shift, and go to state 1
    NUM              shift, and go to state 2
    OTHER            shift, and go to state 3
    LPARN            shift, and go to state 4
    WRITE            shift, and go to state 5
    IF               shift, and go to state 6
    ELSE             shift, and go to state 7
    RETURN           shift, and go to state 8
    RPARN            shift, and go to state 9
    BREAK            shift, and go to state 10
    READ             shift, and go to state 11
    LEFTBRAC         shift, and go to state 12
    RIGHTBRAC        shift, and go to state 13
    LEFTCURLY        shift, and go to state 14
    RIGHTCURLY       shift, and go to state 15
    WHILE            shift, and go to state 16
    KEYWORD          shift, and go to state 17
    AND              shift, and go to state 18
    OR               shift, and go to state 19
    ADD              shift, and go to state 20
    MINUS            shift, and go to state 21
    MUL              shift, and go to state 22
    DIV              shift, and go to state 23
    EQUAL            shift, and go to state 24
    EQUALS           shift, and go to state 25
    NOTEQUAL         shift, and go to state 26
    LESSTHAN         shift, and go to state 27
    LESSTHANOREQ     shift, and go to state 28
    GREATERTHAN      shift, and go to state 29
    GREATERTHANOREQ  shift, and go to state 30

    $default  reduce using rule 2 (stmts)

    prog   go to state 31
    stmts  go to state 32
    stmt   go to state 33


State 1

    4 stmt: IDENTIFIER .

    $default  reduce using rule 4 (stmt)


State 2

    6 stmt: NUM .

    $default  reduce using rule 6 (stmt)


State 3

   33 stmt: OTHER .

    $default  reduce using rule 33 (stmt)


State 4

   14 stmt: LPARN .

    $default  reduce using rule 14 (stmt)


State 5

    7 stmt: WRITE .

    $default  reduce using rule 7 (stmt)


State 6

    9 stmt: IF .

    $default  reduce using rule 9 (stmt)


State 7

   10 stmt: ELSE .

    $default  reduce using rule 10 (stmt)


State 8

   11 stmt: RETURN .

    $default  reduce using rule 11 (stmt)


State 9

   15 stmt: RPARN .

    $default  reduce using rule 15 (stmt)


State 10

   12 stmt: BREAK .

    $default  reduce using rule 12 (stmt)


State 11

   13 stmt: READ .

    $default  reduce using rule 13 (stmt)


State 12

   16 stmt: LEFTBRAC .

    $default  reduce using rule 16 (stmt)


State 13

   17 stmt: RIGHTBRAC .

    $default  reduce using rule 17 (stmt)


State 14

   18 stmt: LEFTCURLY .

    $default  reduce using rule 18 (stmt)


State 15

   19 stmt: RIGHTCURLY .

    $default  reduce using rule 19 (stmt)


State 16

    8 stmt: WHILE .

    $default  reduce using rule 8 (stmt)


State 17

    5 stmt: KEYWORD .

    $default  reduce using rule 5 (stmt)


State 18

   31 stmt: AND .

    $default  reduce using rule 31 (stmt)


State 19

   32 stmt: OR .

    $default  reduce using rule 32 (stmt)


State 20

   20 stmt: ADD .

    $default  reduce using rule 20 (stmt)


State 21

   21 stmt: MINUS .

    $default  reduce using rule 21 (stmt)


State 22

   22 stmt: MUL .

    $default  reduce using rule 22 (stmt)


State 23

   23 stmt: DIV .

    $default  reduce using rule 23 (stmt)


State 24

   24 stmt: EQUAL .

    $default  reduce using rule 24 (stmt)


State 25

   25 stmt: EQUALS .

    $default  reduce using rule 25 (stmt)


State 26

   26 stmt: NOTEQUAL .

    $default  reduce using rule 26 (stmt)


State 27

   27 stmt: LESSTHAN .

    $default  reduce using rule 27 (stmt)


State 28

   28 stmt: LESSTHANOREQ .

    $default  reduce using rule 28 (stmt)


State 29

   29 stmt: GREATERTHAN .

    $default  reduce using rule 29 (stmt)


State 30

   30 stmt: GREATERTHANOREQ .

    $default  reduce using rule 30 (stmt)


State 31

    0 $accept: prog . $end

    $end  shift, and go to state 34


State 32

    1 prog: stmts .

    $default  reduce using rule 1 (prog)


State 33

    3 stmts: stmt . SEMICOLON stmts

    SEMICOLON  shift, and go to state 35


State 34

    0 $accept: prog $end .

    $default  accept


State 35

    3 stmts: stmt SEMICOLON . stmts

    IDENTIFIER       shift, and go to state 1
    NUM              shift, and go to state 2
    OTHER            shift, and go to state 3
    LPARN            shift, and go to state 4
    WRITE            shift, and go to state 5
    IF               shift, and go to state 6
    ELSE             shift, and go to state 7
    RETURN           shift, and go to state 8
    RPARN            shift, and go to state 9
    BREAK            shift, and go to state 10
    READ             shift, and go to state 11
    LEFTBRAC         shift, and go to state 12
    RIGHTBRAC        shift, and go to state 13
    LEFTCURLY        shift, and go to state 14
    RIGHTCURLY       shift, and go to state 15
    WHILE            shift, and go to state 16
    KEYWORD          shift, and go to state 17
    AND              shift, and go to state 18
    OR               shift, and go to state 19
    ADD              shift, and go to state 20
    MINUS            shift, and go to state 21
    MUL              shift, and go to state 22
    DIV              shift, and go to state 23
    EQUAL            shift, and go to state 24
    EQUALS           shift, and go to state 25
    NOTEQUAL         shift, and go to state 26
    LESSTHAN         shift, and go to state 27
    LESSTHANOREQ     shift, and go to state 28
    GREATERTHAN      shift, and go to state 29
    GREATERTHANOREQ  shift, and go to state 30

    $default  reduce using rule 2 (stmts)

    stmts  go to state 36
    stmt   go to state 33


State 36

    3 stmts: stmt SEMICOLON stmts .

    $default  reduce using rule 3 (stmts)
